Update print statement from 'Hello' to 'Goodbye'

--- a/josh-show-live-preview/index.html
+++ b/josh-show-live-preview/index.html
@@ -565,7 +565,7 @@
   <div class="nav-stripe"><span></span><span></span><span></span></div>
   <div class="nav-inner">
     <a href="#home" class="nav-logo">
-      <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/DbrJyWkTUdafXOOC.png" alt="The Josh Guillory Show" />
+      <img src="assets/images/logo/upscalemedia-transformed.png" alt="The Josh Guillory Show" />
     </a>
     <nav class="nav-links">
       <a href="#home" class="nav-link">Home</a>
@@ -594,7 +594,7 @@
   <div class="hero-split">
     <!-- Left: Studio Photo -->
     <div class="hero-photo">
-      <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/brHZjZFhqWVmYKUR.jpeg" alt="Josh Guillory at KPEL 96.5 FM studio" />
+      <img src="assets/images/hero/HeroSectionImage.jpeg" alt="Josh Guillory at KPEL 96.5 FM studio" />
       <div class="hero-photo-fade"></div>
     </div>
     <!-- Right: Navy Panel -->
@@ -604,7 +604,7 @@
         <p class="hero-kpel">— LIVE ON KPEL 96.5 FM —</p>
         <img
           class="hero-logo"
-          src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/uNBkzIJrDNxXXNKQ.png"
+          src="assets/images/logo/upscalemedia-transformed.png"
           alt="The Josh Guillory Show"
         />
         <p class="hero-tagline">Knowledge &amp; Common Sense</p>
@@ -699,7 +699,7 @@
     <div class="host-card">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/YLFdLJdJXCVSUFXp.png" alt="Josh Guillory" />
+          <img src="assets/images/guests/Josh.png" alt="Josh Guillory" />
         </div>
         <div class="host-role-badge">Host &amp; Founder</div>
       </div>
@@ -723,7 +723,7 @@
     <div class="host-card reverse">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/pHqbgfbMiVJXdmFT.png" alt="Jamie Angelle" />
+          <img src="assets/images/guests/Jamie.png" alt="Jamie Angelle" />
         </div>
         <div class="host-role-badge">Co-Host</div>
       </div>
@@ -747,7 +747,7 @@
     <div class="host-card">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/aMKFDjBHWlFnXVVH.png" alt="Martha Jean" />
+          <img src="assets/images/guests/MarthaJean.png" alt="Martha Jean" />
         </div>
         <div class="host-role-badge">Co-Host</div>
       </div>
@@ -844,7 +844,7 @@
   <div class="footer-inner">
     <!-- Brand -->
     <div class="footer-logo">
-      <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663243152362/DbrJyWkTUdafXOOC.png" alt="The Josh Guillory Show" />
+      <img src="assets/images/logo/upscalemedia-transformed.png" alt="The Josh Guillory Show" />
       <p class="footer-desc">Insightful conversations, transformative stories, and expert advice — inspiring growth and fostering community where knowledge and common sense thrive.</p>
       <div class="footer-socials">
         <a href="https://rumble.com/c/TheJoshGuilloryShow/livestreams?e9s=src_v1_cbl" target="_blank" rel="noopener noreferrer" class="footer-social" title="Rumble">▶</a>
