--- a/index.html
+++ b/index.html
@@ -589,9 +589,9 @@
     .host-role-badge { position: absolute; bottom: -0.4rem; left: 50%; transform: translateX(-50%); background: #B91C1C; color: white; font-size: 0.55rem; font-weight: 900; letter-spacing: 0.18em; text-transform: uppercase; padding: 0.25rem 0.9rem; white-space: nowrap; }
     .host-info { flex: 1; }
     .host-meta { display: flex; flex-wrap: wrap; gap: 0.45rem; margin-bottom: 0.85rem; }
-    .host-meta span { font-size: 0.6rem; font-weight: 700; letter-spacing: 0.13em; text-transform: uppercase; font-style: italic; color: rgba(255,255,255,0.48); background: rgba(255,255,255,0.05); padding: 0.22rem 0.65rem; }
+    .host-meta span { font-size: 0.65rem; font-weight: 700; letter-spacing: 0.13em; text-transform: uppercase; font-style: italic; color: rgba(255,255,255,0.75); background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.12); padding: 0.25rem 0.75rem; }
     .host-name { font-family: 'Playfair Display', serif; font-size: clamp(1.65rem, 2.6vw, 2.5rem); font-weight: 800; color: white; margin-bottom: 1.1rem; border-left: 3.5px solid #B91C1C; padding-left: 0.9rem; }
-    .host-bio p { color: rgba(255,255,255,0.68); font-size: 1rem; line-height: 1.7; margin-bottom: 0.85rem; }
+    .host-bio p { color: rgba(255,255,255,0.82); font-size: 1rem; line-height: 1.7; margin-bottom: 0.85rem; }
 
     /* WAVEFORM QUOTE */
     #waveform-quote {
@@ -611,7 +611,7 @@
     }
     .cta-bg {
       position: absolute; inset: 0;
-      background-image: url('Assets/images/cta/LafayetteCity.jpg'), url('Assets/images/cta/city-bg.jpg'), url('Assets/images/LafayetteCity.jpg');
+      background-image: url('Assets/images/cta/LafayetteCity.jpg');
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -918,7 +918,7 @@
     <article class="host-card">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img loading="lazy" decoding="async" src="Assets/images/Host Pics/Josh.jpeg" alt="Josh Guillory">
+          <img loading="lazy" decoding="async" src="Assets/images/Guests/Josh.png" alt="Josh Guillory">
         </div>
         <div class="host-role-badge">Host & Founder</div>
       </div>
@@ -939,7 +939,7 @@
     <article class="host-card reverse">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img loading="lazy" decoding="async" src="Assets/images/Host Pics/Jamie.jpeg" alt="Jamie Angelle">
+          <img loading="lazy" decoding="async" src="Assets/images/Guests/Jamie.png" alt="Jamie Angelle">
         </div>
         <div class="host-role-badge">Co-Host</div>
       </div>
@@ -961,7 +961,7 @@
     <article class="host-card">
       <div class="host-portrait-wrap">
         <div class="host-portrait-ring">
-          <img loading="lazy" decoding="async" src="Assets/images/Host Pics/MarthaJean.jpeg" alt="Martha Jean">
+          <img loading="lazy" decoding="async" src="Assets/images/Guests/MarthaJean.png" alt="Martha Jean">
         </div>
         <div class="host-role-badge">Co-Host</div>
       </div>
