--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     .hero-logo-img {
       width: clamp(280px, 34vw, 520px); height: auto; object-fit: contain;
       filter: drop-shadow(0 6px 24px rgba(0,0,0,0.7)) brightness(1.08);
-      margin-bottom: 0.55rem; opacity: 0;
+      margin-bottom: -2.45rem; opacity: 0;
     }
 
     /* Subtitle — centered between the two CTA buttons */
@@ -243,7 +243,7 @@
       text-transform: none;
       margin: 0;
       padding: 0 0.25rem;
-      text-shadow: 0 2px 14px rgba(201,168,76,0.3);
+      text-shadow: 0 2px 14px rgba(201, 168, 76, 0.3);
       white-space: nowrap;
       flex-shrink: 0;
       align-self: center;
@@ -496,28 +496,28 @@
     .video-wrapper { position: relative; width: 100%; max-width: 480px; }
     .video-shadow-ring {
       position: absolute; inset: 8px -18px -32px 8px;
-      background: rgba(3,8,20,0.95); border-radius: 8px;
-      filter: blur(32px); z-index: 0;
+      background: rgba(185,28,28,0.35); border-radius: 8px;
+      filter: blur(38px); z-index: 0;
     }
-    /* Extra glow halo behind the video for the pop-out effect */
+    /* Bright red glow halo behind the video */
     .video-wrapper::before {
       content: '';
       position: absolute;
-      inset: -10px -14px -20px -14px;
-      background: radial-gradient(ellipse at 50% 60%, rgba(185,28,28,0.22) 0%, rgba(0,0,0,0) 70%);
-      border-radius: 10px;
+      inset: -16px -20px -28px -20px;
+      background: radial-gradient(ellipse at 50% 60%, rgba(220,38,38,0.55) 0%, rgba(185,28,28,0.18) 45%, rgba(0,0,0,0) 75%);
+      border-radius: 12px;
       z-index: 0;
       pointer-events: none;
-      filter: blur(8px);
+      filter: blur(12px);
     }
     .video-frame-wrap {
       position: relative; z-index: 1; border-radius: 5px; overflow: hidden;
-      border: 1.5px solid rgba(185,28,28,0.5);
+      border: 2px solid rgba(220,38,38,0.7);
       box-shadow:
-        0 3px 0 rgba(185,28,28,0.45),
+        0 0 0 4px rgba(185,28,28,0.25),
+        0 0 40px rgba(220,38,38,0.5),
         0 12px 50px rgba(0,0,0,0.9),
-        0 28px 80px rgba(0,0,0,0.7),
-        0 0 0 1px rgba(255,255,255,0.04);
+        0 28px 80px rgba(0,0,0,0.7);
       aspect-ratio: 16/9; background: #000;
       filter: brightness(1.08) contrast(1.03);
       transform: translateY(0);
@@ -526,10 +526,10 @@
     .video-frame-wrap:hover {
       transform: translateY(-8px);
       box-shadow:
-        0 3px 0 rgba(185,28,28,0.55),
+        0 0 0 4px rgba(185,28,28,0.35),
+        0 0 60px rgba(220,38,38,0.65),
         0 18px 60px rgba(0,0,0,0.95),
-        0 36px 90px rgba(0,0,0,0.75),
-        0 0 30px rgba(185,28,28,0.12);
+        0 36px 90px rgba(0,0,0,0.75);
       filter: brightness(1.12) contrast(1.04);
     }
     .video-frame-wrap iframe { width: 100%; height: 100%; border: none; display: block; }
@@ -577,11 +577,23 @@
     .hosts-list { max-width: 1500px; margin: 0 auto; display: flex; flex-direction: column; gap: 3rem; }
     .host-card {
       display: flex; gap: 2.5rem; align-items: flex-start; padding: 2rem;
-      border: 1px solid rgba(255,255,255,0.06); background: rgba(255,255,255,0.018);
-      box-shadow: 0 6px 32px rgba(0,0,0,0.4), 0 2px 10px rgba(0,0,0,0.25);
+      border: 1px solid rgba(201,168,76,0.2); background: rgba(255,255,255,0.018);
+      box-shadow:
+        0 0 0 1px rgba(201,168,76,0.12),
+        0 6px 32px rgba(0,0,0,0.5),
+        0 2px 10px rgba(0,0,0,0.3),
+        0 0 40px rgba(201,168,76,0.12),
+        0 8px 28px rgba(201,168,76,0.1);
       transition: box-shadow 0.3s, transform 0.3s;
     }
-    .host-card:hover { box-shadow: 0 12px 48px rgba(0,0,0,0.55), 0 3px 14px rgba(185,28,28,0.18); transform: translateY(-2px); }
+    .host-card:hover {
+      box-shadow:
+        0 0 0 1px rgba(201,168,76,0.3),
+        0 12px 48px rgba(0,0,0,0.6),
+        0 0 55px rgba(201,168,76,0.22),
+        0 10px 36px rgba(201,168,76,0.18);
+      transform: translateY(-3px);
+    }
     .host-card.reverse { flex-direction: row-reverse; }
     .host-portrait-wrap { flex-shrink: 0; position: relative; }
     .host-portrait-ring { width: 200px; height: 200px; border-radius: 50%; overflow: hidden; border: 3.5px solid #B91C1C; box-shadow: 0 0 0 5px rgba(185,28,28,0.12), 0 6px 28px rgba(0,0,0,0.35); background: #0a1a2e; display: block; }
@@ -860,7 +872,7 @@
       <div class="video-wrapper">
         <div class="video-shadow-ring"></div>
         <div class="video-frame-wrap">
-          <iframe src="https://rumble.com/embed/v79d0rv/?pub=2p1m5c" frameborder="0" allowfullscreen="" title="The Josh Guillory Show - Featured Episode"></iframe>
+          <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=JoshGuilloryShow" frameborder="0" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="The Josh Guillory Show - Featured Episode"></iframe>
         </div>
       </div>
     </div>
@@ -1033,7 +1045,7 @@
     <p class="cta-desc">Join thousands of listeners across Louisiana and beyond who tune in daily for straight talk, common sense, and real conversations about the issues that matter.</p>
     <div class="cta-buttons">
       <a href="https://rumble.com/c/TheJoshGuilloryShow/livestreams?e9s=src_v1_cbl" target="_blank" rel="noopener noreferrer" class="cta-btn-primary">▶ Watch on Rumble</a>
-      <a href="https://youtube.com" target="_blank" rel="noopener noreferrer" class="cta-btn-secondary">▶ Watch on YouTube</a>
+      <a href="https://www.youtube.com/@JoshGuilloryShow" target="_blank" rel="noopener noreferrer" class="cta-btn-secondary">▶ Watch on YouTube</a>
     </div>
     <p class="cta-location">✦ Lafayette, Louisiana ✦</p>
   </div>
@@ -1048,10 +1060,10 @@
       <div class="footer-socials">
         <a href="https://rumble.com/c/TheJoshGuilloryShow/livestreams?e9s=src_v1_cbl" target="_blank" rel="noopener noreferrer" class="footer-social" title="Rumble">▶</a>
         <a href="https://facebook.com/thejoshguilloryshow/" target="_blank" rel="noopener noreferrer" class="footer-social" title="Facebook">f</a>
-        <a href="https://twitter.com/jguilloryshow" target="_blank" rel="noopener noreferrer" class="footer-social" title="X">𝕏</a>
-        <a href="https://youtube.com" target="_blank" rel="noopener noreferrer" class="footer-social" title="YouTube">▶</a>
-        <a href="https://instagram.com/joshguilloryshow/" target="_blank" rel="noopener noreferrer" class="footer-social" title="Instagram">◯</a>
-        <a href="https://tiktok.com" target="_blank" rel="noopener noreferrer" class="footer-social" title="TikTok">♫</a>
+        <a href="https://x.com/i/broadcasts/1eaKbWQqZOXGX" target="_blank" rel="noopener noreferrer" class="footer-social" title="X">𝕏</a>
+        <a href="https://www.youtube.com/@JoshGuilloryShow" target="_blank" rel="noopener noreferrer" class="footer-social" title="YouTube">▶</a>
+        <a href="https://www.instagram.com/joshguilloryshow/" target="_blank" rel="noopener noreferrer" class="footer-social" title="Instagram">◯</a>
+        <a href="https://www.tiktok.com/discover/the-josh-guillory-show" target="_blank" rel="noopener noreferrer" class="footer-social" title="TikTok">♫</a>
       </div>
     </div>
     <div class="footer-col">
